--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
     "license": "MIT",
     "require": {
         "php": "^8.1",
+        "monext/payline-sdk": "^4.77",
         "motherbrain/payline-web-payment-api-sdk": "^1.0",
         "sylius/sylius": "~1.13.0",
         "symfony/webpack-encore-bundle": "^1.15"
